Remove webkit hiding of the scrollbar as it is no longer needed

--- a/assets/css/common/generic.css
+++ b/assets/css/common/generic.css
@@ -1,8 +1,3 @@
-/* Hide scrollbar to prevent distraction when moving between pages */
-/* Needs cross browser compatibilty */
-::-webkit-scrollbar {
-    display: none;
-}
 .center {
     text-align: center;
 }
